--- a/website_template/templates/about_me.html
+++ b/website_template/templates/about_me.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="poop.js"></script>
-    <h1>projects homepage</h1>
+    <script src="poop.js" id="crap" ></script>
+    <h1 id = "monkey"> projects homepage</h1>
+    <div>
+        <div class="shit"></div>
+    </div>
 </body>
 </html>
